@@ -1,7 +1,8 @@
 #include "Rivet/Jet.hh"
+#include "Rivet/Cuts.hh"
+#include "Rivet/ParticleName.hh"
 #include "Rivet/Tools/Logging.hh"
 #include "Rivet/Tools/ParticleIdUtils.hh"
-#include "Rivet/ParticleName.hh"
 
 namespace Rivet {
 
@@ -182,6 +183,26 @@ namespace Rivet {
     foreach (const Particle& tp, tags()) {
       if (isTau(tp) && c->accept(tp)) rtn.push_back(tp);
     }
+    return rtn;
+  }
+
+
+  /// Filter a jet collection in-place to the subset that passes the supplied Cut
+  Jets& filterBy(Jets& jets, const Cut& c) {
+    if (c != Cuts::OPEN) {
+      const auto newend = std::remove_if(jets.begin(), jets.end(), [&](const Jet& j){ return !c->accept(j); });
+      jets.erase(newend, jets.end());
+    }
+    return jets;
+  }
+
+  /// Get a subset of the supplied jets that passes the supplied Cut
+  Jets filterBy(const Jets& jets, const Cut& c) {
+    // Just return a copy if the cut is open
+    if (c == Cuts::OPEN) return jets;
+    // But if there is a non-trivial cut...
+    Jets rtn;
+    std::copy_if(jets.begin(), jets.end(), rtn.begin(), [&](const Jet& j){ return c->accept(j); });
     return rtn;
   }
 
